--- a/_data/episode-2-detection-of-deception-/manifest.json
+++ b/_data/episode-2-detection-of-deception-/manifest.json
@@ -30,6 +30,12 @@
             "id": "https://agunnells.github.io/the-last-archive-s1/episode-2-detection-of-deception-/canvas-1/canvas/sound-effects.json",
             "label": "Sound Effects"
           }
+          ,
+          {
+            "type": "AnnotationPage",
+            "id": "https://agunnells.github.io/the-last-archive-s1/episode-2-detection-of-deception-/canvas-1/canvas/reenactments.json",
+            "label": "Reenactments"
+          }
         ],
         "items": [
           {
