--- a/_data/episode-2-detection-of-deception-/manifest.json
+++ b/_data/episode-2-detection-of-deception-/manifest.json
@@ -27,6 +27,12 @@
           
           {
             "type": "AnnotationPage",
+            "id": "https://agunnells.github.io/the-last-archive-s1/episode-2-detection-of-deception-/canvas-1/canvas/content.json",
+            "label": "Content"
+          }
+          ,
+          {
+            "type": "AnnotationPage",
             "id": "https://agunnells.github.io/the-last-archive-s1/episode-2-detection-of-deception-/canvas-1/canvas/sound-effects.json",
             "label": "Sound Effects"
           }
