--- a/_data/episode-1-the-clue-of-the-blue-bottle-/manifest.json
+++ b/_data/episode-1-the-clue-of-the-blue-bottle-/manifest.json
@@ -23,6 +23,14 @@
         "id": "https://agunnells.github.io/the-last-archive-s1/episode-1-the-clue-of-the-blue-bottle-/canvas-1/canvas",
         "type": "Canvas",
         "duration": 2683.0,
+        "annotations": [
+          
+          {
+            "type": "AnnotationPage",
+            "id": "https://agunnells.github.io/the-last-archive-s1/episode-1-the-clue-of-the-blue-bottle-/canvas-1/canvas/content.json",
+            "label": "Content"
+          }
+        ],
         "items": [
           {
             "id": "https://agunnells.github.io/the-last-archive-s1/episode-1-the-clue-of-the-blue-bottle-/canvas-1/paintings",
