--- a/_data/episode-3-the-invisible-lady-/manifest.json
+++ b/_data/episode-3-the-invisible-lady-/manifest.json
@@ -33,6 +33,12 @@
           ,
           {
             "type": "AnnotationPage",
+            "id": "https://agunnells.github.io/the-last-archive-s1/episode-3-the-invisible-lady-/canvas-1/canvas/sound-effects.json",
+            "label": "Sound Effects"
+          }
+          ,
+          {
+            "type": "AnnotationPage",
             "id": "https://agunnells.github.io/the-last-archive-s1/episode-3-the-invisible-lady-/canvas-1/canvas/reenactments.json",
             "label": "Reenactments"
           }
