--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,3 +3,4 @@
 - pages/episode-2-detection-of-deception-.md
 - pages/episode-3-the-invisible-lady-.md
 - pages/episode-4-unheard-.md
+- pages/introduction.md
